@@ -1,9 +1,20 @@
+# Note: this file was auto-generated by Module::Build::Compat version 0.39_01
 use ExtUtils::MakeMaker;
-
-use strict;
-use warnings;
-
-WriteMakefile(
-    NAME		=> 'Term::Shell',
-    VERSION_FROM	=> 'lib/Term/Shell.pm',
-);
+WriteMakefile
+(
+  'NAME' => 'Term::Shell',
+  'VERSION_FROM' => 'lib/Term/Shell.pm',
+  'PREREQ_PM' => {
+                   'Data::Dumper' => 0,
+                   'Term::ReadLine' => 0,
+                   'Test' => 0,
+                   'Test::More' => 0,
+                   'strict' => 0,
+                   'vars' => 0,
+                   'warnings' => 0
+                 },
+  'INSTALLDIRS' => 'site',
+  'EXE_FILES' => [],
+  'PL_FILES' => {}
+)
+;
